--- a/public/me.html
+++ b/public/me.html
@@ -1,4 +1,18 @@
-foo
+    
+
+<html>
+  <body>
+    <h1>You're using a layout</h1>
+    <p>
+      <h3> I'm a header</h3>
+      <p>Put things in the header</p>
+   <a href='http://google.com'>This is a link to google</a>
+      <a href='me.html'>Me</a>
+
+    </p>
+    <hr />
+    <div>
+      foo
 poo
 <h1>watch out!</h1>
 <p> dance dance </p>
@@ -14,3 +28,12 @@ poo
         <li>I like kissing human</li>
       
     </ul>
+    </div>
+    <hr />
+    <div>
+      <h3> I'm a footer</h3>
+      <p>Put things in the footer</p>
+  <a href='http://google2222222.com'>This is a link to google2222222</a>
+    </div>
+  </body>
+</html>
