--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,21 @@
-<h1> Hello</h1>
+    
+
+<html>
+  <body>
+    <h1>You're using a layout</h1>
+    <p>
+      <h3> I'm a header</h3>
+      <p>Put things in the header</p>
+   <a href='http://google.com'>This is a link to google</a>
+      <a href='me.html'>Me</a>
+
+    </p>
+    <hr />
+    <div>
+      <h1> Hello</h1>
 <p>
   The time is now:
-  2013-11-09 14:08:47 -0800
+  2013-11-09 14:37:56 -0800
 </p>
 
 <p>
@@ -9,3 +23,13 @@
   
 </p>
 
+
+    </div>
+    <hr />
+    <div>
+      <h3> I'm a footer</h3>
+      <p>Put things in the footer</p>
+  <a href='http://google2222222.com'>This is a link to google2222222</a>
+    </div>
+  </body>
+</html>
